--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
   "contributes": {
   },
   "scripts": {
-		"build": "vsce package -o vscode-vue-pug-enhanced-$npm_package_version.vsix",
-		"install": "yarn build && code --install-extension vscode-vue-pug-enhanced-$npm_package_version.vsix",
+    "push": "git push origin master && git push coding master",
+		"build": "vsce package -o vscode-vue-pug-enhanced.vsix",
+		"install": "yarn build && code --install-extension vscode-vue-pug-enhanced.vsix",
     "lint": "eslint .",
     "pretest": "yarn run lint",
     "test": "node ./test/runTest.js"
