--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "engines": {
     "vscode": "^1.51.0"
   },
-	"tags": [
+  "tags": [
     "vscode",
     "jade",
     "pug",
@@ -15,37 +15,61 @@
     "html2jade",
     "pug2html",
     "jade2html"
-	],
-	"categories": [
+  ],
+  "keywords": [
+    "Vue",
+    "Pug",
+    "Snippets",
+    "Formatters",
+    "Vue Snippets",
+    "Vue Pug Snippets",
+    "Vue.js",
+    "Pug.js"
+  ],
+  "categories": [
     "Snippets",
     "Programming Languages",
     "Formatters",
     "Other"
-	],
+  ],
   "activationEvents": [
-    "onCommand:extension.transformHtmlToPug",
-    "onCommand:extension.transformPugToHtml"
+    "onCommand:extension.transformHtml2Pug",
+    "onCommand:extension.transformPug2Html"
   ],
   "main": "./src/main.js",
   "contributes": {
+    "commands": [
+      {
+        "command": "extension.transformHtml2Pug",
+        "title": "Html to Pug"
+      },
+      {
+        "command": "extension.transformPug2Html",
+        "title": "Pug to Html"
+      }
+    ]
   },
   "scripts": {
     "push": "git push origin master && git push coding master",
-		"build": "vsce package -o vscode-vue-pug-enhanced.vsix",
-		"install": "yarn build && code --install-extension vscode-vue-pug-enhanced.vsix",
+    "build": "vsce package -o vscode-vue-pug-enhanced.vsix",
+    "ext": "yarn build && code --install-extension vscode-vue-pug-enhanced.vsix",
     "lint": "eslint .",
     "pretest": "yarn run lint",
     "test": "node ./test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.51.0",
     "@types/glob": "^7.1.3",
     "@types/mocha": "^8.0.0",
     "@types/node": "^12.11.7",
+    "@types/vscode": "^1.51.0",
     "eslint": "^7.9.0",
     "glob": "^7.1.6",
     "mocha": "^8.1.3",
     "typescript": "^4.0.2",
     "vscode-test": "^1.4.0"
+  },
+  "dependencies": {
+    "html2jade": "^0.8.6",
+    "pug": "^3.0.0"
   }
 }
