--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "description": "Pug syntax for Vue files and enhanced Pug features",
   "publisher": "quanzaiyu",
   "version": "1.0.0",
+	"icon": "images/icon.png",
   "engines": {
     "vscode": "^1.51.0"
   },
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/quanzaiyu/vscode-vue-pug-enhanced.git"
+	},
   "tags": [
     "vscode",
     "jade",
