--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Vue Pug Enhanced",
   "description": "Pug syntax for Vue files and enhanced Pug features",
   "publisher": "quanzaiyu",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "icon": "images/icon.png",
   "engines": {
     "vscode": "^1.51.0"
@@ -49,6 +49,9 @@
     "onCommand:extension.transformPug2Html"
   ],
   "main": "./src/main.js",
+  "extensionDependencies": [
+    "octref.vetur"
+  ],
   "contributes": {
     "commands": [
       {
