使用webpack打包源码以缩减包体积

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,11 +1,16 @@
 .vscode/**
 .vscode-test/**
+node_modules/**
 test/**
+src/**/*.js
+out/**
 .gitignore
 .yarnrc
 vsc-extension-quickstart.md
 **/jsconfig.json
 **/*.map
 **/.eslintrc.json
-
+tsconfig.json
+webpack.config.js
+push.js
 _refs/**
