--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Vue Pug Enhanced",
   "description": "Pug syntax for Vue files and enhanced Pug features",
   "publisher": "quanzaiyu",
-  "version": "1.1.11",
+  "version": "1.1.12",
   "icon": "images/icon.png",
   "engines": {
     "vscode": "^1.51.0"
@@ -55,7 +55,7 @@
     "onCommand:vscode-vue-pug-enhanced.transformHtml2Pug",
     "onCommand:vscode-vue-pug-enhanced.transformPug2Html"
   ],
-  "main": "./src/main.js",
+  "main": "./dist/main.js",
   "extensionDependencies": [
     "octref.vetur"
   ],
@@ -109,9 +109,9 @@
       }
     ],
     "configuration": {
-			"type": "object",
-			"title": "Pug",
-			"properties": {
+      "type": "object",
+      "title": "Pug",
+      "properties": {
         "vscode-vue-pug-enhanced.omitDiv": {
           "type": "boolean",
           "default": false,
@@ -137,10 +137,13 @@
           "default": true,
           "description": "Omit attribute separating commas."
         }
-			}
-		}
+      }
+    }
   },
   "scripts": {
+    "vscode:prepublish": "webpack --mode production",
+    "webpack": "webpack --mode development",
+    "webpack-dev": "webpack --mode development --watch",
     "push": "node push.js",
     "build": "vsce package -o vscode-vue-pug-enhanced.vsix",
     "ext": "yarn build && code --install-extension vscode-vue-pug-enhanced.vsix",
@@ -158,7 +161,9 @@
     "glob": "^7.1.6",
     "mocha": "^8.1.3",
     "typescript": "^4.0.2",
-    "vscode-test": "^1.4.0"
+    "vscode-test": "^1.4.0",
+    "webpack": "^5.6.0",
+    "webpack-cli": "^4.2.0"
   },
   "dependencies": {
     "html2jade": "^0.8.6",
