--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Vue Pug Enhanced",
   "description": "Pug syntax for Vue files and enhanced Pug features",
   "publisher": "quanzaiyu",
-  "version": "1.1.15",
+  "version": "1.1.16",
   "icon": "images/icon.png",
   "engines": {
     "vscode": "^1.51.0"
@@ -109,7 +109,7 @@
     "snippets": [
       {
         "language": "jade",
-        "path": "./src/snippets/pug.json"
+        "path": "./src/snippets/pug.code-snippets"
       }
     ],
     "configuration": {
